--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Home"
     url: /
+  - title: "Services"
+    url: /services/
   - title: "Articles"
     url: /articles/
   - title: "Archive"
