Update services, add bits articles, add tags

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ plugins:
 author:
   name: "Mike Pack"
   avatar: "/assets/images/headshot.png"
-  bio: "Howdy! I'm a principal engineer and senior startup leader. This is a glimpse into my brain."
+  bio: "Howdy! I'm a principal engineer and senior startup leader with a passion for building, innovating, and solving tough challenges. This is a glimpse into my brain."
   location: "Denver, CO"
   links:
     - label: "GitHub"
